fixed gallery layout problems with long titles

--- a/modules/org.opencms.workplace/resources/system/workplace/galleries/downloadgallery/css/dialog.css
+++ b/modules/org.opencms.workplace/resources/system/workplace/galleries/downloadgallery/css/dialog.css
@@ -284,6 +284,7 @@ input.showborder, select.showborder {
 	font-size: 11px;
 	font-style: italic;
 	width: 100%;
+	white-space: nowrap;
 	overflow: hidden;
 }
 
